移除沒有用到的library